--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <a id="highscores" href="#">View Highscores</a>
         <main id="container">
-            <div id="welcome-container">
+            <div id="welcome-container" class="visible">
                 <h1>Welcome to the Coding Quiz!</h1>
                 <p id="description">The following quiz consists of 5 coding related, multiple choice questions. You will have 2 minutes to complete all of the questions before the timer runs out. Upon completion of the quiz or if the timer runs out, you will save your attempt to a Highscores list. Good Luck!</p>
                 <button id="start">Start Quiz</button>
