created the question bank

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             </div>
             <div id="highscores-list" class="hide">
                 <h2>Highscores</h2>
-                <ul id="listOfHighscores">
-                </ul>
-                <button id="go-back">Go Back</button>
+                <ol id="listOfHighscores">
+                </ol>
+                <button id="go-back">Go Back To Welcome Page</button>
                 <button id="clear-highscores">Clear Highscores</button>
             </div>
         </main>
