made changes to the question bank array in order to make it easier to identify a correct answer

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
                 <button id="start">Start Quiz</button>
             </div>
             <div id="question-container" class="hide">
-                <div id="question">Question</div>
+                <div id="question"></div>
                 <div id="answer-choices">
                     <div class="answers">
                         <button class="button">A</button>
-                        <p>This is a placeholer for an answer choice.</p>
+                        <div class="answersABCD"></div>
                     </div>
                     <div class="answers">
                         <button class="button">B</button>
-                        <p>This is a placeholer for an answer choice.</p>
+                        <div class="answersABCD"></div>
                     </div>
                     <div class="answers">
                         <button class="button">C</button>
-                        <p>This is a placeholer for an answer choice.</p>
+                        <div class="answersABCD"></div>
                     </div>
                     <div class="answers">
                         <button class="button">D</button>
-                        <p>This is a placeholer for an answer choice.</p>
+                        <div class="answersABCD"></div>
                     </div>
                 </div>
                 <button id="next">Next Question</button>
