Created the timer and both questions and answers show up after clicking next question, except for the last question.

--- a/index.html
+++ b/index.html
@@ -14,23 +14,18 @@
                 <button id="start">Start Quiz</button>
             </div>
             <div id="question-container" class="hide">
+                <h3 class="timer"></h3>
                 <div id="question"></div>
                 <div id="answer-choices">
                     <div class="answers">
-                        <button class="button">A</button>
-                        <div class="answersABCD"></div>
-                    </div>
-                    <div class="answers">
-                        <button class="button">B</button>
-                        <div class="answersABCD"></div>
-                    </div>
-                    <div class="answers">
-                        <button class="button">C</button>
-                        <div class="answersABCD"></div>
-                    </div>
-                    <div class="answers">
-                        <button class="button">D</button>
-                        <div class="answersABCD"></div>
+                        <!-- <button class="button"></button> -->
+                        <!-- <div class="answersABCD"></div> -->
+                        <!-- <button class="button"></button> -->
+                        <!-- <div class="answersABCD"></div> -->
+                        <!-- <button class="button"></button> -->
+                        <!-- <div class="answersABCD"></div> -->
+                        <!-- <button class="button"></button> -->
+                        <!-- <div class="answersABCD"></div> -->
                     </div>
                 </div>
                 <button id="next">Next Question</button>
