if user does not finish quiz in time, game is over and score is not logged.

--- a/index.html
+++ b/index.html
@@ -18,16 +18,12 @@
                 <div id="question"></div>
                 <div id="answer-choices">
                     <div class="answers">
-                        <!-- <button class="button"></button> -->
-                        <!-- <button class="button"></button> -->
-                        <!-- <button class="button"></button> -->
-                        <!-- <button class="button"></button> -->
                     </div>
                 </div>
             </div>
             <div id="highscores-form" class="hide">
                 <h2>You're Finished!</h2>
-                <div>Your final score is: <span id="score"></span></div>
+                <div id="score-container">Your final score is: <span id="score"></span></div>
                 <form>
                     <label for="initials">Enter your initials here:</label>
                     <input type="text" id="initials" name="userInitials"><br>
