--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <main id="container">
             <div id="welcome-container" class="visible">
                 <h1>Welcome to the Coding Quiz!</h1>
-                <p id="description">The following quiz consists of 5 coding related, multiple choice questions. You will have 2 minutes to complete all of the questions before the timer runs out. Each incorrect answer decreases the timer. Upon completion of the quiz or if the timer runs out, your attempt will be saved to a Highscores list. Good Luck!</p>
+                <p id="description">The following quiz consists of 5 coding related, multiple choice questions. You will have 1.5 minutes to complete all of the questions before the timer runs out. Each incorrect answer decreases the timer. Upon completion of the quiz or if the timer runs out, your attempt will be saved to a Highscores list. Good Luck!</p>
                 <button id="start">Start Quiz</button>
             </div>
             <div id="question-container" class="hide">
@@ -27,13 +27,13 @@
                 <form>
                     <label for="initials">Enter your initials here:</label>
                     <input type="text" id="initials" name="userInitials"><br>
-                    <input type="submit" value="Submit">
+                    <input id="submitBtn" type="submit" value="Submit">
                 </form>    
             </div>
             <div id="highscores-list" class="hide">
                 <h2>Highscores</h2>
-                <ol id="listOfHighscores">
-                </ol>
+                <ul id="listOfHighscores">
+                </ul>
                 <button id="go-back">Go Back To Welcome Page</button>
                 <button id="clear-highscores">Clear Highscores</button>
             </div>
