once users submit their initials on the highscores form, they are prompted with a highscores list where they can view all their highscores (including those from previous sessions). They may also choose to clear the highscores list, in which case the local storage will also be cleared. From this highscores list, they may choose to go back to the welcome page and start over again.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>Highscores</h2>
                 <ul id="listOfHighscores">
                 </ul>
-                <button id="go-back">Go Back To Welcome Page</button>
+                <button id="go-back">Go Back to Welcome Page</button>
                 <button id="clear-highscores">Clear Highscores</button>
             </div>
         </main>
